2007-03-16  Paul J Stevens <paul@nfg.nl>

	* dbmail-message.c:
	add x-dbmail-physmessage-id header only during retrieval, not during
	insertion (closes: #502)
	* check_dbmail_imapd.c, configure, dbmail-message.c, misc.c, misc.h:
	merging 8bit header patches (bug #538)

2007-03-14  Paul J Stevens <paul@nfg.nl>

	* pop3.c:
	check return value on db_update_pop (closes: #530)
	* dbmail-imapsession.c, imapcommands.c, test-scripts/testexpunge.imap, 
	  test-scripts/testimap.py:
	fix expunge response (closes #535)

2007-03-14  Aaron Stone  <aaron@serendipity.cx>

	* db.c:
	Skip Recent flag because it is now hardcoded into the query (closes
	bug #534)
	* serverparent.c:
	Rearranged ClearConfig and new ResetConfig to avoid freeing an
	uninitialized pointer, as well as not leak a few bytes on SIGHUP
	(closes bug #537)

2007-03-11  Paul J Stevens <paul@nfg.nl>

	* acinclude.m4, configure:
	final touch on sqlite autocreate
	* debian/changelog:
	2.2.4 packages
	* config.c:
	expand tilde char in db path (closes #529)
	* debian/dbmail.postinst:
	fix sed error

2007-03-10  Paul J Stevens <paul@nfg.nl>

	* debian/dbmail.postinst:
	avoid slash in sed s commands
	* debian/changelog, debian/dbmail.postinst:
	2.2.4 rc1 packages
	* dbmail-mailbox.c:
	fix for export problem #590

2007-03-09  Paul J Stevens <paul@nfg.nl>

	* debian/po/ml.po, debian/po/pt.po, debian/po/ta.po:
	fix broken po files
	* contrib/sql2sql/mysql2pgsql.sh:
	minor fixes
	* Makefile.in, acinclude.m4, configure, configure.in, dbmail.h.in, 
	  man/Makefile.in, modules/Makefile.in, modules/dbsqlite.c:
	add auto-creation of database to sqlite driver

2007-03-08  Paul J Stevens <paul@nfg.nl>

	* debian/po/ml.po, debian/po/pt.po, debian/po/ta.po:
	debian po updates

2007-03-07  Aaron Stone  <aaron@serendipity.cx>

	* dbmail-message.c:
	It is not a short write if getslen == 1 and putslen == 0 (why does
	this happen?) (closes bug #525)
	* dbmail-mailbox.c:
	Always prepend headers to a dumped message, in case the header block